--- a/Owl/CMakeLists.txt
+++ b/Owl/CMakeLists.txt
@@ -24,8 +24,8 @@ target_link_libraries (Owl PUBLIC spdlog::spdlog)
 if (WIN32)
   target_compile_definitions (Owl PUBLIC OWL_PLATFORM_WIN32)
 endif ()
-target_compile_definitions (Owl PRIVATE $<$<CONFIG:Debug>:OWL_CONFIG_DEBUG>)
-target_compile_definitions (Owl PRIVATE $<$<CONFIG:Release>:OWL_CONFIG_RELEASE>)
+target_compile_definitions (Owl PUBLIC $<$<CONFIG:Debug>:OWL_CONFIG_DEBUG>)
+target_compile_definitions (Owl PUBLIC $<$<CONFIG:Release>:OWL_CONFIG_RELEASE>)
 target_compile_definitions (Owl PRIVATE OWL_BUILD_LIBRARY)
 target_include_directories (Owl PUBLIC "Include")
 
